<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DualActivity" >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header" />

    <EditText
		android:id="@+id/main_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text"
        android:layout_marginBottom="40dp"
        android:selectAllOnFocus="true"/>
    
    <TextView
        android:id="@+id/pick_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/input" />
    <LinearLayout
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    android:layout_gravity="center">
		    
		    <NumberPicker
		        android:id="@+id/num_pick"        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_marginBottom="30dp"
		        android:layout_gravity="center"/>
		    
		    <NumberPicker
		        android:id="@+id/num_pick2"        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_marginBottom="30dp"
		        android:layout_gravity="center"/>
	</LinearLayout>
    
    <CheckBox
        android:id="@+id/check"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/allow"/>

    <Button
        android:id="@+id/go_button"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_button" >
    </Button>

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/output" />
</LinearLayout>
